# IMU_test_Varies_Algorithm

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/imu_yesense_ros/: ImuExtended.h  attitude.h
devel/lib/imu_yesense_ros/: imu_yesense_ros_node
devel/lib/pkgconfig/: imu_yesense_ros.pc
devel/lib/python3/dist-packages/imu_yesense_ros/msg/: _ImuExtended.py  __init__.py  _attitude.py
devel/share/common-lisp/ros/imu_yesense_ros/msg/: ImuExtended.lisp  _package.lisp  _package_ImuExtended.lisp  _package_attitude.lisp  attitude.lisp  imu_yesense_ros-msg.asd
devel/share/gennodejs/ros/imu_yesense_ros/msg/: ImuExtended.js  _index.js  attitude.js
devel/share/imu_yesense_ros/cmake/: imu_yesense_ros-msg-extras.cmake  imu_yesense_ros-msg-paths.cmake  imu_yesense_rosConfig.cmake
devel/share/roseus/ros/imu_yesense_ros/: manifest.l
devel/share/roseus/ros/imu_yesense_ros/msg/: ImuExtended.l  attitude.l
src/imu_yesense_ros/: CMakeLists.txt  package.xml
src/imu_yesense_ros/include/: AttitudeCalculator.h  imu_sensor_yesense.h
src/imu_yesense_ros/msg/: ImuExtended.msg
src/imu_yesense_ros/src/: AttitudeCalculator.cpp  CMakeLists.txt  Madgwick.cpp  attitude.cpp  imu_sensor_yesense.cpp  imu_sensor_yesense.h  main.cpp  rosmain.cpp  rs232_toolkit.cpp  rs232_toolkit.h
src/imu_yesense_ros/src/Fusion/: FusionAhrs.c
